Close the account chooser and auto sign-in opt in with ESC on Mac.

BUG=609810

Review-Url: https://codereview.chromium.org/1961023002
Cr-Commit-Position: refs/heads/master@{#392298}

Former-commit-id: 4d237e3b85e855b9620ba3e94df06095ad3ecc07